syntax = "proto3";

package fsmodels;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "agro.proto";

option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;

option (gogoproto.unmarshaler_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;

message Metadata {
  uint32 uid = 1;
  uint32 gid = 2;
  uint32 mode = 3;
  uint32 flags = 4;
  uint64 ctime = 5;
  uint64 mtime = 6;
}

message FileINode {
  INode inode = 1;
  uint64 chain = 2;
  repeated string filenames = 3; // Should always be length at least 1, includes hard links
  Metadata permissions = 4;
}

message Directory {
  Metadata metadata = 1;
  // key is the filename without the path
  map<string, FileEntry> files = 2;
}

message FileEntry {
  uint64 chain = 1;
  string sympath = 2; 
}

message FileChainSet {
  map<uint64, uint64> chains = 1;
}
